# argon2-cffi

./: .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  FAQ.md  FAQ.rst  MANIFEST.in  README.md  README.rst  SECURITY.md  appveyor.yml  dev-requirements.txt  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini  typing_examples.py
.azure-pipelines/: wheel-builder.yml
.github/: CONTRIBUTING.md  CONTRIBUTING.rst  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: ci.yml  codeql-analysis.yml  main.yml  pypi-package.yml  wheel.yml  zizmor.yml
docs/: Makefile  api.rst  argon2.md  argon2.rst  backward-compatibility.rst  cli.md  cli.rst  conf.py  credits.md  faq.md  faq.rst  howto.md  index.md  index.rst  installation.md  installation.rst  login_example.py  parameters.md  parameters.rst
docs/_static/: custom.css
src/argon2/: __init__.py  __main__.py  _api.py  _ffi_build.py  _legacy.py  _password_hasher.py  _util.py  _utils.py  exceptions.py  low_level.py  profiles.py
tests/: test_api.py  test_legacy.py  test_low_level.py  test_packaging.py  test_password_hasher.py  test_util.py  test_utils.py
tests/typing/: api.py
