# Packaging

[metadata]
# ensure LICENSE is included in wheels
license_file = LICENSE

# Testing

[tool:pytest]
minversion = 3.0
strict = true
addopts = -ra -s
testpaths = tests

[flake8]
exclude = src/argon2/_ffi.py
ignore =
    # Ambiguous variable names
    # Ignored, since there is an enum value "I" for the algorithm type Argon2I
    E741
