# Packaging

[metadata]
# ensure LICENSE is included in wheels
license_file = LICENSE


# Testing
[tool:pytest]
minversion = 3.0
strict = true
addopts = -ra --capture=no
testpaths = tests
filterwarnings =
    once::Warning


[flake8]
exclude = src/argon2/_ffi.py
ignore =
    # Ambiguous variable names
    # Ignored, since there is an enum value "I" for the algorithm type Argon2I
    E741
    # Not an actual PEP8 violation
    W503
    # Black vs flake8 conflict
    E203


[isort]
atomic=true
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip=__init__.py

known_first_party=argon2
known_third_party=argon2,cffi,hypothesis,pytest,setuptools,six
